--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "@builder.io/react": "^8.0.9",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.4.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
