--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
     "@builder.io/react": "^8.0.9",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
+    "@vercel/speed-insights": "^1.2.0",
     "next": "15.1.7",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-multi-carousel": "^2.8.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
