--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@mui/icons-material": "^6.4.4",
     "@mui/material": "^6.4.4",
     "@supabase/supabase-js": "^2.48.1",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/papaparse": "^5.3.15",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
     "nodemailer": "^6.10.0",
+    "papaparse": "^5.5.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-email-editor": "^1.7.11",
