--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.48.1",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/next-seo": "^2.1.2",
     "@types/papaparse": "^5.3.15",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -25,6 +26,7 @@
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
+    "next-seo": "^6.6.0",
     "nodemailer": "^6.10.0",
     "papaparse": "^5.5.2",
     "react": "^19.0.0",
