added deps for pick data and schedule newsletter

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.4",
+    "@mui/lab": "^6.0.0-beta.28",
     "@mui/material": "^6.4.4",
+    "@mui/x-date-pickers": "^7.27.0",
     "@supabase/supabase-js": "^2.48.1",
     "@types/js-cookie": "^3.0.6",
     "@types/jsonwebtoken": "^9.0.9",
@@ -23,6 +25,7 @@
     "@vercel/speed-insights": "^1.2.0",
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
+    "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
