--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bcrypt": "^5.1.1",
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.4.7",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
