--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "cookie": "^1.0.2",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.4.7",
+    "ioredis": "^5.5.0",
     "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "next": "15.1.7",
